# ELF-Tools

./: CMakeLists.txt  ELF-Tools.code-workspace  README.md  main.cpp
analyzer/: StaticAnalyzer.cpp  StaticAnalyzer.h
